--- a/3-newdatabase/package.json
+++ b/3-newdatabase/package.json
@@ -55,7 +55,7 @@
         "@types/mocha": "^2.2.42",
         "@types/node": "^7.0.43",
         "event-stream": "3.3.4",
-        "sqlops": "github:anthonydresser/sqlops-extension-sqlops",
+        "sqlops": "github:anthonydresser/sqlops-extension-sqlops#1.1.14",
         "tslint": "^5.8.0",
         "typescript": "^2.6.1",
         "vscode": "^1.1.6"
